# Algo2_TP1

./: .gitignore  CMakeLists.txt  division.cpp  division.hpp  main.cpp  polynome.cpp  rationnel.cpp
Q1/: division.cpp  main.cpp
Q4/: grandentier.hpp  multiplication.cpp  tests.cpp
